<resources>
    <string name="app_name">Rides</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_text">This is first screen</string>
    <string name="item_1">Item 1</string>
    <string name="vehicle_detail">Vehicle Detail </string>
    <string name="cancel">Cancel</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total %s</string>
    <plurals name="vehicles">
        <item quantity="one">%d Vehicle</item>
        <item quantity="other">%d Vehicles</item>
    </plurals>
    <string name="enter_number_of_items">Enter number of items</string>
    <string name="Search">Search</string>
    <string name="sort_by_vin">Sort by VIN #</string>
    <string name="sort_by_car_type">Sort by Car Type</string>
    <string name="make_and_model">Make and Model:</string>
    <string name="vin">Vin:</string>
    <string name="car_type">Car Type:</string>
    <string name="vin_label">VIN:</string>
    <string name="make_model_label">Make and Model:</string>
    <string name="color_label">Color:</string>
    <string name="car_type_label">Car Type:</string>
    <string name="error_message_size_range">Please enter a number between 1 and 100.</string>
    <string name="carbon_emission">Carbon emission</string>
    <string name="kilometrage">kilometrage</string>
    <string name="swipe_right_for_carbon_emission">Swipe right for carbon emission view.</string>
    <string name="no_internet">No internet connection</string>
    <string name="go_to_detail">Go to Details</string>
    <string name="carbon_emissions_format">%1$.2f g CO₂/km</string>
    <string name="no_emissions_data_available">No emissions data available.</string>
    <string name="carbon_emission_analysis">The current carbon emissions for the selected vehicle are %1$.2f g CO₂/km, indicating a %2$s emission level compared to average emissions for similar vehicles.</string>
    <string name="n_a">N/A</string>
    <string name="vehicle_list">Vehicle List </string>

</resources>